--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,15 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
+    "axios": "^1.6.0",
+    "date-fns": "^2.30.0",
+    "lucide-react": "^0.263.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.6.0",
     "react-router-dom": "^6.8.1",
-    "axios": "^1.6.0",
-    "socket.io-client": "^4.7.2",
-    "lucide-react": "^0.263.1",
-    "@heroicons/react": "^2.0.18",
-    "date-fns": "^2.30.0",
-    "react-hot-toast": "^2.4.1"
+    "socket.io-client": "^4.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
